--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset= >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Livre Awa</title> 
 </head> 
 <body>
- <!-- header-->
+ <!-- header--> 
  <header>
     <div class="logo">
       <h2><span> STORY </span>LIVRE</h2>
-      <ul class="menu">
+      <ul class="menu">  
         <li><a href=" #"> Accueil</a></li>
         <li><a href="produit.html"> Produit</a></li>
         <li><a href=" #"> Services</a></li>
@@ -47,6 +47,7 @@
        
 
     </section>
+    <script  src="script.js"></script>
     
 </body>
-</html> 
+</html>       
